Add basic tracking script
